<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
    <groupId>io.github.koukobin.ermis</groupId>
	<artifactId>ermis.server</artifactId>
	<packaging>jar</packaging>
	<version>1.0.0-C</version>

	<name>ermis-server</name>
    <url>https://github.com/Koukobin/Ermis</url>
	<inceptionYear>2021</inceptionYear>

	<licenses>
		<license>
			<name>GNU Affero General Public Licence, Version 3.0</name>
			<url>https://www.gnu.org/licenses/agpl-3.0.en.html</url>
		</license>
	</licenses>

    <developers>
        <developer>
            <name>Ilias Koukovinis</name>
            <email>ilias.koukovinis@gmail.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/Koukobin/Ermis.git</connection>
        <developerConnection>scm:git:ssh://github.com/Koukobin/Ermis.git</developerConnection>
        <url>https://github.com/Koukobin/Ermis.git</url>
    </scm>

	<parent>
		<groupId>io.github.koukobin.ermis</groupId>
		<artifactId>ermis-parent</artifactId>
		<version>1.0.0</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<mainClass>github.koukobin.ermis.server.main.java.ServerLauncher</mainClass>
		<src.resources>src/github/koukobin/ermis/server/main/resources</src.resources>
		<target.resources>${project.build.directory}/classes/github/koukobin/ermis/server/main/resources/</target.resources>
	</properties>

	<dependencies>

		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-all</artifactId>
			<version>4.2.6.Final</version>
		</dependency>

		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-tcnative-boringssl-static</artifactId>
			<version>2.0.73.Final</version>
		</dependency>

		<dependency>
			<groupId>io.github.koukobin.ermis</groupId>
			<artifactId>ermis.common</artifactId>
			<version>1.0.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.25.1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.25.1</version>
		</dependency>
		
		<dependency>
			<groupId>com.password4j</groupId>
			<artifactId>password4j</artifactId>
			<version>1.8.4</version>
		</dependency>

		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>7.0.2</version>
		</dependency>

		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>9.4.0</version>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.7.7</version>
		</dependency>

		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>1.6.2</version>
		</dependency>

		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>0.10.2</version>
		</dependency>

	</dependencies>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<finalName>ermis-server-${project.version}</finalName>

		<resources>

			<resource>
				<directory>${src.resources}</directory>
				<targetPath>${target.resources}</targetPath>
			</resource>

		</resources>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<!-- Build an executable JAR -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>${mainClass}</mainClass>
						</manifest>
					</archive>
					<excludes>
						<exclude>test/**</exclude>
					</excludes>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>17</release>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<executable>java</executable>
					<mainClass>${mainClass}</mainClass>
					<arguments>
						<argument>-Djava.security.egd=file:/dev/./urandom</argument>
						<argument>-server</argument>
						<argument>-XX:+UseZGC</argument>
						<argument>-ea</argument>
						<argument>--add-opens</argument>
						<argument>java.base/java.lang=ALL-UNNAMED</argument>
						<argument>--add-opens</argument>
						<argument>java.base/jdk.internal.misc=ALL-UNNAMED</argument>
						<argument>--add-opens</argument>
						<argument>java.base/java.nio=ALL-UNNAMED</argument>
						<argument>-Dio.netty.tryReflectionSetAccessible=true</argument>
						<argument>-Dfile.encoding=UTF-8</argument>
					</arguments>
				</configuration>
			</plugin>

		</plugins>

	</build>

</project>
